--- a/frontend/src/components/store/cart/cart.css
+++ b/frontend/src/components/store/cart/cart.css
@@ -86,7 +86,9 @@
   color: rgb(255, 255, 255);
   text-align: center;
   padding: 7px;
-  border-radius: 10px;
+  margin: 2px;
+  height: 50px;
+  border-radius: 8px;
   font-weight: 520;
   font-size: 14px;
 }
@@ -95,7 +97,9 @@
   color: rgb(255, 255, 255);
   text-align: center;
   padding: 7px;
-  border-radius: 10px;
+  margin: 2px;
+  height: 50px;
+  border-radius: 8px;
   font-weight: 520;
   font-size: 14px;
 }
@@ -104,7 +108,9 @@
   color: rgb(255, 255, 255);
   text-align: center;
   padding: 7px;
-  border-radius: 10px;
+  height: 50px;
+  margin: 2px;
+  border-radius: 8px;
   font-weight: 520;
   font-size: 14px;
 }
