--- a/frontend/src/components/catering/caterings.css
+++ b/frontend/src/components/catering/caterings.css
@@ -3,3 +3,16 @@
 .hide_class {
   display: none;
 }
+
+.category-name {
+  background-color: var(--primary-color);
+}
+
+.product-row {
+  background-color: var(--light-color);
+  padding: 5px;
+  color: var(--dark-color);
+  font-weight: 600;
+  text-align: center;
+  border-radius: 12px;
+}
