--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -1,3 +1,11 @@
+.mobile_menu {
+  margin-left: 40px !important;
+}
+.my_img {
+  height: 50px;
+  width: 120px;
+  margin-left: 20px;
+}
 .title {
   cursor: pointer;
 }
