--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,12 @@
 .container {
-  background-image: url("./images/bg1.jpg") !important;
+  background-color: #e9e9e9;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   opacity: 0.9; /* set the opacity to 0.8 */
 }
 body {
-  background-color: rgb(43, 8, 92) !important; /* set the opacity to 0.8 */
+  background-color: rgb(33, 35, 39) !important; /* set the opacity to 0.8 */
 
   opacity: 0.9;
 }
