--- a/frontend/src/pages/products/products/style.css
+++ b/frontend/src/pages/products/products/style.css
@@ -1,3 +1,12 @@
+.bg_white {
+  background-color: rgba(255, 255, 255, 0.825) !important;
+}
+.width_50 {
+  width: 50% !important;
+}
+.width_33 {
+  width: 33% !important;
+}
 .item {
   background-color: white !important;
   border-radius: 9px !important;
@@ -11,10 +20,11 @@
   word-wrap: break-word;
 }
 .my_text {
-  font-size: 10px;
+  font-size: 12px;
+  font-weight: 600;
 }
 .addToCart:hover {
-  background-color: rgb(255, 99, 99) !important;
+  background-color: rgb(104, 35, 169) !important;
 }
 .move-to-cart:hover {
   background-color: rgb(243, 225, 65) !important;
