--- a/frontend/src/components/cart/cart.css
+++ b/frontend/src/components/cart/cart.css
@@ -1,3 +1,15 @@
+.meat_text {
+  color: rgb(40, 48, 80) !important;
+  background-color: rgba(226, 229, 237, 0.984);
+  font-size: 13px !important;
+  font-weight: 700 !important;
+}
+.meat_background {
+  background-color: rgb(62, 36, 81);
+}
+.my_background {
+  background-color: rgb(249, 240, 255);
+}
 .plus:hover {
   background-color: rgb(247, 225, 27) !important;
   color: rgb(66, 66, 66) !important;
