--- a/frontend/src/pages/home/home.css
+++ b/frontend/src/pages/home/home.css
@@ -1,3 +1,9 @@
+.home-p {
+  background-color: rgb(255, 255, 255);
+  font-size: 12px;
+  padding: 5px;
+  border-radius: 33px;
+}
 .p-item {
   background-color: #fff;
   padding: 8px;
