--- a/frontend/src/components/cart/style.scss
+++ b/frontend/src/components/cart/style.scss
@@ -1,3 +1,8 @@
+.product-item {
+  padding: 10px;
+  background-color: rgb(63, 0, 13);
+  color: white;
+}
 .cart-minus {
   background-color: rgb(245, 180, 180) !important;
   text-align: center;
