--- a/frontend/src/pages/manager/style.scss
+++ b/frontend/src/pages/manager/style.scss
@@ -1,3 +1,9 @@
-.fs1{
-    font-size: 20px;
+.fs1 {
+  font-size: 17px !important;
+}
+
+.label1 {
+  background-color: #9d52ff44;
+  color: white;
+  padding: 5px;
 }
